- Fixed incorrect feedback when user input step confirmation message content is left empty and the step is completed.